# Python-Al-and-DS

./: !!!.py  !!.py  !.py  !1.py  HasPair.py  HasPairCount.py  HasPairNotPair.py  MarsSOS.py  a.py  aa.txt  aaa.py  aaa2.py  ag2.py  agde2.py  agde3.py  agoda.cpp  agoda1.py  agoda2.py  agoda4 subword.py  azure.py  balance.py  binary.py  bitodec dectobi.py  block2.py  block3.py  block5.py  blockfint1.py  blockfint4.py  blockfint5.py  blockfint6.py  changeformattime.py  countposifound.py  country.csv  countword.py  factori.py  fibon.py  find array.py  find disappend.py  find string.py  fizz.py  (+24 more)
Array/: BestTimeBuySellStock.py  BinarySearch.py  ContainerWithMostWater.py  ContainsDuplicate.py  JumpGame.py  MaxSubarray.py  ProductofArrayExceptSelf.py  SearchRotatedSortedArray.py  SingleElementSortedArray.py  SquaresSortedArray.py  ThreeSum.py  TwoSum.py  TwoSumII.py
BBL/: aaa6.py  chtose class.py  chtose.py
KB/: pass1.py  pass1_1.py  pass2.py  pass2_1.py
LinkedLists/: LinkedListCycle.py
StacksAndQueues/: EvaluateReversePolishNotation.py  ImplementQueueUsingStacks.py  ImplementStackUsingQueues.py  ValidParentheses.py
Strings/: LongestPalindromicSubstring.py  ReverseString.py  ValidAnagram.py  ValidPalindrome.py  detectPosition.py
Tree/: MaximumDepthofBinaryTree.py
ag backend/: aaa3.py  ag1.py  ag2_1.py  ag3.py  round1_no1.py  round1_no2.py  round2.py  stack.py
ag de/: agde2.py  agde2_1.py  agde2_2.py  pretest1_card.py  pretest1_gong.py  (+2 more)
ser/: README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml  result.csv
ser/db/: 01_CreateDB_CreateTable.sql
(+14 files in other folders)
